Fix "regex" word alignment, slight tweak

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -7604,6 +7604,10 @@ td.text-center span {
     margin-top: 0;
     display: inline-block;
     padding: 0 15px;
+    &:last-of-type {
+      position: relative;
+      top: 5px;
+    }
 
     span {
       color: $primary-section-color;
